# .dotfiles

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .zshrc  README.md  TODO.md  bootstrap.sh  bootstrap.yml  dirs  flake.nix  install-flake.sh  main.yaml  requirements.yml  run  shell.nix
.config/nvim/: init.lua
.config/nvim/lua/: optics.lua  options.lua  remaps.lua
.config/nvim/vim/: coc.vim  plugins.vim
ansible/: playbook.yml  playbook.yml.sample  software.yml  stow.yml
awesome/: test.sh
awesome/.config/awesome/: .rc.lua.swp  keybindings.lua  menu.lua  mouse.lua  optics.lua  rc.lua  rules.lua  signals.lua  vars.lua  volume.lua  wibar.lua
direnv/.config/direnv/: direnvrc
firefox/chrome/: userChrome.css
fish/.config/fish/: config.fish  fish_variables
flameshot/.config/flameshot/: flameshot.ini
git/: .gitconfig  .gitignore
git/.config/git/: apply-template.sh  attributes  config  ignore
group_vars/: all
home-manager/.config/home-manager/: flake.nix  home.nix
kanata/.config/autostart/: Kanata.desktop  kanata.desktop
kanata/.config/kanata/: kanata.kbd
kitty/.config/kitty/: kitty.conf
lazyvim/.config/lazyvim/: lazy-lock.json  lazyvim.json
lazyvim/.config/nvim/: lazy-lock.json  lazyvim.json
lxqt/.config/autostart/: lxqt-notifications.desktop
lxqt/.config/lxqt/: lxqt-config-appearance.conf  lxqt-config-monitor.conf  lxqt-config.conf  lxqt.conf  session.conf  (+1 more)
nixos/: configuration.nix  desktop.nix  flake.nix  guis.nix  printing.nix  programming.nix
nvim/.config/nvim/skeletons/: .pre-commit-config.yaml  pyproject.toml  shell.nix
starship/.config/: starship.toml
tmux/: .tmux.conf
zsh/: .zshenv  .zshrc
zsh/.config/: starship.toml
(+148 files in other folders)
