[project]
name = "python-skeleton"
description = "Python project skeleton"
authors = [
  {name = "Tobias Fischer", email = "..."},
]
# requires-python = ">=3.11"
# classifiers = [
#   "Programming Language :: Python :: 3 :: Only",
#   "Programming Language :: Python :: 3.11",
#   "Programming Language :: Python :: 3.12",
# ]
# [project.urls]
# homepage = "https://github.com/tobb10001/python-skeleton"
dependencies = [
    
]
#
# [tool.ruff]
# line-length = 79
#
# [tool.ruff.lint]
# select = ["I", "RUF", "UP"]
#
# [tool.ruff.lint.isort]
# combine-as-imports = true
# force-sort-within-sections = true
#
# [tool.mypy]
# install_types = true
# non_interactive = true
# strict = true
